dataset1235/2025-2/1153765216/users/1581346053/executions/2747719322_2383239197.log
== SUBMISSION (2025-08-21 19:47:14)
-- CODE: 
a = int("input(Digite a distancia a?"))
b = int("input(Digite a distancia b?"))
y = int(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:44:55)
-- CODE: 
a = float(input(Digite a distancia a?))
b = float(input(Digite a distancia b?))
y = float(input(Digite o angulo:))
c = sqrt(a**2) + (b**2) - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:52:12)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrta**2 + b**2 - 2*a*b * cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:48:57)
-- CODE: 
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b * cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:50:13)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b * cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:47:59)
-- CODE: 
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:46:47)
-- CODE: 
a = float("input(Digite a distancia a?"))
b = float("input(Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:46:11)
-- CODE: 
a = float("input(Digite a distancia a?"))
b = float("input(Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt(a**2) + (b**2) - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:52:11)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrta**2 + b**2 - 2*a*b * cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:57:03)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = math.sqrt(a**2 + b**2 - 2*a*b * math.cos(y))
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo:111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo:25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo:22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo:1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo:56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo:17.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:58:51)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = float(input("Digite a distancia b?"))
y = math.radians(float(input()))
c = math.sqrt(a**2 + b**2 - 2*a*b * math.cos(y))
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distancia a?Digite a distancia b?87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distancia a?Digite a distancia b?16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distancia a?Digite a distancia b?17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distancia a?Digite a distancia b?1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distancia a?Digite a distancia b?54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distancia a?Digite a distancia b?9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:59:27)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = float(input("Digite a distancia b?"))
y = math.radians(float(input("Digite o angulo")))
c = math.sqrt(a**2 + b**2 - 2*a*b * math.cos(y))
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:58:09)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = float(input("Digite a distancia b?"))
y = math.radians(float(input))
c = math.sqrt(a**2 + b**2 - 2*a*b * math.cos(y))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 13:58:13)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = float(input("Digite a distancia b?"))
y = math.radians(float(input))
c = math.sqrt(a**2 + b**2 - 2*a*b * math.cos(y))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(float(input))
                     ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:46:49)
-- CODE: 
a = float("input(Digite a distancia a?"))
b = float("input(Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:48:00)
-- CODE: 
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b cos(y)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:47:14)
-- CODE: 
a = int("input(Digite a distancia a?"))
b = int("input(Digite a distancia b?"))
y = int(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = int("input(Digite a distancia a?"))
                                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:56:15)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = math.sqrt(a**2 + b**2 - 2*a*b * math.cos(y))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:50:11)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b * cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 13:59:26)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = float(input("Digite a distancia b?"))
y = math.radians(float(input("Digite o angulo")))
c = math.sqrt(a**2 + b**2 - 2*a*b * math.cos(y))
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distancia a?Digite a distancia b?Digite o angulo9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:44:56)
-- CODE: 
a = float(input(Digite a distancia a?))
b = float(input(Digite a distancia b?))
y = float(input(Digite o angulo:))
c = sqrt(a**2) + (b**2) - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a?))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:44:16)
-- CODE: 
a = float(input(Digite a distancia a:))
b = float(input(Digite a distancia b:))
y = float(input(Digite o angulo:))
c = sqrt(a**2) + (b**2) - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:48:57)
-- CODE: 
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt a**2 + b**2 - 2*a*b * cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 4
    c = sqrt a**2 + b**2 - 2*a*b * cos(y)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:44:12)
-- CODE: 
a = float(input(Digite a distancia a:))
b = float(input(Digite a distancia b:))
y = float(input(Digite o angulo:))
c = sqrt(a**2) + (b**2) - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = float(input(Digite a distancia a:))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 13:56:18)
-- CODE: 
import math
a = float(input("Digite a distancia a?"))
b = Float(input("Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = math.sqrt(a**2 + b**2 - 2*a*b * math.cos(y))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = Float(input("Digite a distancia b?"))
        ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:46:10)
-- CODE: 
a = float("input(Digite a distancia a?"))
b = float("input(Digite a distancia b?"))
y = float(input("Digite o angulo:"))
c = sqrt(a**2) + (b**2) - 2*a*b cos(y)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a = float("input(Digite a distancia a?"))
                                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
